Fix time tag disappearing issue. Support Dark Mode.
Closes #8, #9

--- a/app/components/Importer.scss
+++ b/app/components/Importer.scss
@@ -1,111 +1,142 @@
-@import "~_sass/_placeholders.scss";
+@import '~_sass/_variables.scss';
+@import '~_sass/_placeholders.scss';
 
 .importer {
-    padding: 15px 20px;
-    border: 1px solid #aaa;
-    background-color: #fff;
+	padding: 15px 20px;
+	border: 1px solid #aaa;
+	border-radius: $ui-border-radius;
+	background-color: $app-background-color;
 
-    &.new-design {
-        padding: 25px 35px;
-        border: none;
-        box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14),
-        0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.4);
-    }
+	&.new-design {
+		padding: 25px 35px;
+		border: none;
+		box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14),
+			0 6px 30px 5px rgba(0, 0, 0, 0.12),
+			0 8px 10px -5px rgba(0, 0, 0, 0.4);
+	}
+}
+
+:global([dark]) {
+	.importer {
+		color: $dark-running-text-color;
+		background-color: $dark-app-background-color;
+
+		&.new-design {
+			border: 1px solid $dark-modal-border-color;
+			box-shadow: rgba(0, 0, 0, 0.14) 0px 16px 60px 8px,
+				rgba(0, 0, 0, 0.12) 0px 24px 76px 11px,
+				rgba(0, 0, 0, 0.4) 0px 25px 100px -13px;
+		}
+	}
 }
 
 .heading {
-    margin-bottom: 10px;
-    font-size: 14px;
+	position: relative;
+	top: -1px;
 
-    > img {
-        margin: 5px;
-    }
+	margin-bottom: 10px;
+	font-size: 14px;
+
+	> img {
+		margin: 5px;
+	}
+}
+:global([dark]) {
+	.heading {
+		color: $dark-text-color;
+	}
 }
 
 .textarea {
-    @extend %tag-input;
+	@extend %tag-input;
 
-    width: 100%;
-    height: 200px;
+	width: 100%;
+	height: 200px;
+
+	border-radius: $ui-border-radius;
+}
+:global([dark]) {
+	.textarea {
+		@extend %dark-tag-input;
+	}
 }
 
 .toolbar {
-    text-align: right;
+	text-align: right;
+}
+.toolbar-btn {
+	$hover: #f7f7f7;
 
-    &-btn {
-        $hover: #f7f7f7;
+	padding: 8px 12px;
+	margin-left: 5px;
+	border-radius: $ui-border-radius;
 
-        padding: 8px 12px;
-        margin-left: 5px;
+	color: #bbb;
+	cursor: pointer;
 
-        color: #bbb;
-        cursor: pointer;
-
-        &:hover {
-            background-color: $hover;
-        }
-        &:active {
-            background-color: darken($hover, 5%);
-        }
-
-        &-primary {
-            composes: toolbar-btn;
-            color: #167ac6;
-        }
-    }
+	&:hover {
+		background-color: $hover;
+	}
+	&:active {
+		background-color: darken($hover, 5%);
+	}
+}
+.toolbar-btn-primary {
+	composes: toolbar-btn;
+	color: #167ac6;
 }
 
 @mixin btn-color($color) {
-    $hover: lighten($color, 5%);
-    $active: darken($color, 5%);
+	$hover: lighten($color, 5%);
+	$active: darken($color, 5%);
 
-    &,
-    &:focus {
-        background-color: $color;
-    }
-    &:hover {
-        background-color: $hover;
-    }
-    &:active {
-        background-color: $active;
-    }
+	&,
+	&:focus {
+		background-color: $color;
+	}
+	&:hover {
+		background-color: $hover;
+	}
+	&:active {
+		background-color: $active;
+	}
 }
 @mixin btn-disable {
-    &.disabled,
-    &[disabled] {
-        opacity: 0.6;
-        pointer-events: none;
-    }
+	&.disabled,
+	&[disabled] {
+		opacity: 0.6;
+		pointer-events: none;
+	}
 }
 
 .new-design {
-    .textarea {
-        padding: 6px 8px;
-    }
+	.textarea {
+		padding: 6px 8px;
+	}
 
-    .toolbar {
-        margin-top: 8px;
-    }
+	.toolbar {
+		margin-top: 8px;
+	}
 
-    .toolbar-btn {
-        @include btn-color(#EBEBEB);
-        @include btn-disable;
+	.toolbar-btn {
+		@include btn-color(#ebebeb);
+		@include btn-disable;
 
-        margin-left: 8px;
-        border: none;
-        color: rgba(17, 17, 17, 0.6);
+		margin-left: 8px;
+		border: none;
+		color: rgba(17, 17, 17, 0.6);
 
-        &:focus {
-            outline: none;
-        }
-    }
+		&:focus {
+			outline: none;
+		}
+	}
 
-    .toolbar-btn-primary {
-        @extend .toolbar-btn;
+	.toolbar-btn-primary {
+		@extend .toolbar-btn;
 
-        @include btn-color(#2793e6);
-        @include btn-disable;
+		@include btn-color(#2793e6);
+		@include btn-disable;
 
-        color: #fff;
-    }
+		color: #fff;
+	}
 }
